# amazon-qldb-shell

./: .gitignore  .gitmodules  AWS_Sample_EULA.rtf  CHANGELOG.md  Cargo.toml  DESIGN.md  HACKING.md  MANIFEST.in  README.md  buildspec.yml  requirements.txt  setup.py  start_cmd_qldb.bat
.github/: dependabot.yml
.github/workflows/: dependabot_automerge.yml  release.yml  rust.yml
pyqldbcli/: __init__.py  __main__.py  decorators.py  qldb_cli.py
qldbshell/: __init__.py  __main__.py  command_container.py  decorators.py  outcome.py  qldb_shell.py  shell_transaction.py  shell_utils.py
qldbshell/errors/: __init__.py
src/: awssdk_driver.rs  blocking.rs  credentials.rs  error.rs  lib.rs  main.rs  opt.rs  repl_helper.rs  results.rs  runner.rs  rusoto_driver.rs  settings.pest  settings.rs  timer.rs  tracing.rs  transaction.rs  ui.rs
src/command/: mod.rs
src/results/: mod.rs  table.rs
src/settings/: command_line.rs  command_line_options.pest  config.rs  environment.rs  mod.rs
tests/unit/: test_shell.py
wix/: main.wxs
