[package]
name = "amazon_qldb_shell"
version = "2.0.2"
authors = ["Amazon Web Services"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amazon-qldb-driver = { git = "https://github.com/awslabs/amazon-qldb-driver-rust", package = "amazon-qldb-driver", branch = "main" }

# All of this is related to the AWS SDK for Rust
aws-sdk-qldbsession = { version = "0.19.0", features = ["rustls"] }
aws-http = "0.49.0"
aws-smithy-client = { version = "0.49.0", features = ["client-hyper", "rustls", "rt-tokio"] }
aws-smithy-http = { version = "0.52.0", features = ["rt-tokio"] }
aws-smithy-http-tower = "0.49.0"
aws-types = "0.49.0"
aws-config = "0.49.0"
tower = "0.4.13"
http = "0.2.8"
# --

rustyline = "10.0.0"
dirs = "4.0.0"
structopt = "0.3.26"
ion-rs = { version = "0.13.0", features = ["ion_c"] }
ion-c-sys = "0.4.15"
chrono = "0.4.19"
async-trait = "0.1.56"
rustyline-derive = "0.7.0"
itertools = "0.10.3"
thiserror = "1.0.37"
anyhow = "1.0.64"
tokio = "1.21.1"
serde = { version = "1.0.144", features = ["derive"] }
tracing = { version = "0.1.34", features = ["log"] }
tracing-subscriber = { version = "0.3.14", features = ["fmt", "env-filter"] }
tracing-appender = "0.2.2"
tracing-bunyan-formatter = "0.3.3"
comfy-table = "6.1.0"
smallvec = "1.9.0"
atty = "0.2.14"
url = "2.3.1"
futures = "0.3.24"

[dev-dependencies]
tempdir = "0.3.7"

[[bin]]
name = "qldb"
path = "src/main.rs"
